--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "ws": "^0.5.0"
+    "ws": "^0.5.0",
+    "protractor-jasmine2-screenshot-reporter": "latest"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "latest",
     "gulp-util": "latest",
-      "gulp-nodemon":"latest"
+    "gulp-nodemon": "latest"
   }
 }
