--- a/bower.json
+++ b/bower.json
@@ -2,19 +2,23 @@
   "name": "tek",
   "version": "0.1.1",
   "dependencies": {
-    "jquery": "1.x",
-    "angular": "1.5",
-    "angular-bootstrap": "0.11.0",
-    "angular-cookies": "1.5",
-    "angular-mocks": "1.5",
-    "angular-pusher": "0.0.13",
-    "angular-resource": "1.5",
-    "angular-route": "1.5",
+    "jquery": "^1.x",
+    "angular": "^1.5.5",
+    "angular-animate": "latest",
+    "angular-bootstrap": "latest",
+    "angular-cookies": "^1.5",
+    "angular-mocks": "^1.5",
+    "angular-pusher": "latest",
+    "angular-resource": "^1.5",
+    "angular-route": "^1.5",
     "angular-ui-grid": "latest",
-    "angular-ui-router": "latest",
-    "bootstrap": "3.1.1",
+    "angular-ui-router": "^0.2.18",
+    "bootstrap": "latest",
     "lodash": "latest",
     "ng-lodash": "latest",
     "rxjs": "^4.1.0"
+  },
+  "resolutions":{
+    "angular":"^1.5.5"
   }
 }
